--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,500 +28,11 @@
 				<p>
 					有礙於每次訂餐都要經過一段繁複的手續，加上不到一定金額要加收外送費，故萌生的這個辦公室團體外送平台Dada Eats，希望能提供一個友善的用餐管道
 				</p>
-				<a href="#timeline" class="primary-btn text-uppercase">看教學</a>
+				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
 			</div>
 		</div>
 	</div>
 </section>
 <!-- End home-about Area -->
 
-<section class="timeline pb-120 section-gap" id="timeline">
-	<div class="text-center">
-		<div class="menu-content pb-70">
-			<div class="title text-center">
-				<h1 class="mb-10">開發中</h1>
-				<p>尚未完成，請點選最上方看菜單...</p>
-			</div>
-		</div>
-	</div>
-	<ul>
-		<li>
-			<div class="content hidden" style="opacity: 1;">
-				<h4>
-					<time>Masters in Graphics &amp; Fine Arts</time>
-				</h4>
-				<p><b>Session:</b> 2010-11</p>
-				<p><b>Result:</b> 3.78 (In the Scale of 4.00)</p>
-			</div>
-		</li>
-		<li>
-			<div class="content hidden" style="opacity: 1;">
-				<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
-				<h4>
-					<time>Creative Content Developer</time>
-				</h4>
-				<p>July 2015 to Present</p>
-			</div>
-		</li>
-		<li>
-			<div class="content hidden" style="opacity: 1;">
-				<h4>
-					<time>Bachelor in Graphics &amp; UI/UX</time>
-				</h4>
-				<p><b>Session:</b> 2006-09</p>
-				<p><b>Result:</b> 3.40 (In the Scale of 4.00)</p>
-			</div>
-		</li>
-		<li>
-			<div class="content hidden" style="opacity: 1;">
-				<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
-				<h4>
-					<time>Senior UI/UX Designer</time>
-				</h4>
-				<p>July 2015 to Present</p>
-			</div>
-		</li>
-		<li>
-			<div class="content hidden" style="opacity: 1;">
-				<h4>
-					<time>Diploma in Fine Arts &amp; Printing</time>
-				</h4>
-				<p><b>Session:</b> 2003-06</p>
-				<p><b>Result:</b> 4.94 (In the Scale of 5.00)</p>
-			</div>
-		</li>
-	</ul>
-</section>
-
-<!-- Start services Area -->
-<section class="services-area section-gap">
-	<div class="container">
-		<div class="row d-flex justify-content-center">
-			<div class="menu-content  col-lg-7">
-				<div class="title text-center">
-					<h1 class="mb-10">My Offered Services</h1>
-					<p>At about this time of year, some months after New Year’s resolutions have been made and kept, or
-						made and neglected.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-pie-chart"></span>
-					<a href="#">
-						<h4>Web Design</h4>
-					</a>
-					<p>
-						“It is not because things are difficult that we do not dare; it is because we do not dare that
-						they are difficult.”
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-laptop-phone"></span>
-					<a href="#">
-						<h4>Web Development</h4>
-					</a>
-					<p>
-						If you are an entrepreneur, you know that your success cannot depend on the opinions of others.
-						Like the wind, opinions.
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-camera"></span>
-					<a href="#">
-						<h4>Photography</h4>
-					</a>
-					<p>
-						Do you want to be even more successful? Learn to love learning and growth. The more effort you
-						put into improving your skills.
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-picture"></span>
-					<a href="#">
-						<h4>Clipping Path</h4>
-					</a>
-					<p>
-						Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last
-						two decades. There is a lot of argument.
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-tablet"></span>
-					<a href="#">
-						<h4>Apps Interface</h4>
-					</a>
-					<p>
-						Do you sometimes have the feeling that you’re running into the same obstacles over and over
-						again? Many of my conflicts.
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="single-services">
-					<span class="lnr lnr-rocket"></span>
-					<a href="#">
-						<h4>Graphic Design</h4>
-					</a>
-					<p>
-						You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is
-						true, however, ‘believing’ is not just thinking that.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End services Area -->
-
-<!-- Start fact Area -->
-<section class="facts-area section-gap" id="facts-area">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3 col-md-6 single-fact">
-				<h1 class="counter">2536</h1>
-				<p>Projects Completed</p>
-			</div>
-			<div class="col-lg-3 col-md-6 single-fact">
-				<h1 class="counter">6784</h1>
-				<p>Happy Clients</p>
-			</div>
-			<div class="col-lg-3 col-md-6 single-fact">
-				<h1 class="counter">2239</h1>
-				<p>Cups of Coffee</p>
-			</div>
-			<div class="col-lg-3 col-md-6 single-fact">
-				<h1 class="counter">435</h1>
-				<p>Real Professionals</p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- end fact Area -->
-
-<!-- Start testimonial Area -->
-<section class="testimonial-area section-gap">
-	<div class="container">
-		<div class="row d-flex justify-content-center">
-			<div class="menu-content pb-70 col-lg-8">
-				<div class="title text-center">
-					<h1 class="mb-10">Client’s Feedback About Me</h1>
-					<p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or
-						even a person.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="active-testimonial">
-				<div class="single-testimonial item d-flex flex-row">
-					<div class="thumb">
-						<img class="img-fluid" src="img/elements/user1.png" alt="">
-					</div>
-					<div class="desc">
-						<p>
-							Do you want to be even more successful? Learn to love learning and growth. The more effort
-							you put into improving your skills, the bigger the payoff you.
-						</p>
-						<h4>Harriet Maxwell</h4>
-						<p>CEO at Google</p>
-					</div>
-				</div>
-				<div class="single-testimonial item d-flex flex-row">
-					<div class="thumb">
-						<img class="img-fluid" src="img/elements/user2.png" alt="">
-					</div>
-					<div class="desc">
-						<p>
-							A purpose is the eternal condition for success. Every former smoker can tell you just how
-							hard it is to stop smoking cigarettes. However.
-						</p>
-						<h4>Carolyn Craig</h4>
-						<p>CEO at Facebook</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End testimonial Area -->
-
-<!-- Start price Area -->
-<section class="price-area section-gap">
-	<div class="container">
-		<div class="row d-flex justify-content-center">
-			<div class="menu-content pb-70 col-lg-8">
-				<div class="title text-center">
-					<h1 class="mb-10">Choose Your Plan</h1>
-					<p>When someone does something that they know that they shouldn’t do, did they.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-3 col-md-6 single-price">
-				<div class="top-part">
-					<h1 class="package-no">01</h1>
-					<h4>Economy</h4>
-					<p class="mt-10">For the individuals</p>
-				</div>
-				<div class="package-list">
-					<ul>
-						<li>Secure Online Transfer</li>
-						<li>Unlimited Styles for interface</li>
-						<li>Reliable Customer Service</li>
-					</ul>
-				</div>
-				<div class="bottom-part">
-					<h1>£199.00</h1>
-					<a class="price-btn text-uppercase" href="#">Buy Now</a>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 single-price">
-				<div class="top-part">
-					<h1 class="package-no">02</h1>
-					<h4>Business</h4>
-					<p class="mt-10">For the individuals</p>
-				</div>
-				<div class="package-list">
-					<ul>
-						<li>Secure Online Transfer</li>
-						<li>Unlimited Styles for interface</li>
-						<li>Reliable Customer Service</li>
-					</ul>
-				</div>
-				<div class="bottom-part">
-					<h1>£299.00</h1>
-					<a class="price-btn text-uppercase" href="#">Buy Now</a>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 single-price">
-				<div class="top-part">
-					<h1 class="package-no">03</h1>
-					<h4>Premium</h4>
-					<p class="mt-10">For the individuals</p>
-				</div>
-				<div class="package-list">
-					<ul>
-						<li>Secure Online Transfer</li>
-						<li>Unlimited Styles for interface</li>
-						<li>Reliable Customer Service</li>
-					</ul>
-				</div>
-				<div class="bottom-part">
-					<h1>£399.00</h1>
-					<a class="price-btn text-uppercase" href="#">Buy Now</a>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 single-price">
-				<div class="top-part">
-					<h1 class="package-no">04</h1>
-					<h4>Exclusive</h4>
-					<p class="mt-10">For the individuals</p>
-				</div>
-				<div class="package-list">
-					<ul>
-						<li>Secure Online Transfer</li>
-						<li>Unlimited Styles for interface</li>
-						<li>Reliable Customer Service</li>
-					</ul>
-				</div>
-				<div class="bottom-part">
-					<h1>£499.00</h1>
-					<a class="price-btn text-uppercase" href="#">Buy Now</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End price Area -->
-
-<!-- Start recent-blog Area -->
-<section class="recent-blog-area section-gap">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-md-8 pb-30 header-text">
-				<h1>Latest posts from our blog</h1>
-				<p>
-					You may be a skillful, effective employer but if you don’t trust your personnel and the opposite,
-					then the chances of improving and expanding the business
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<img class="f-img img-fluid mx-auto" src="img/b1.jpg" alt="">
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-					<div>
-						<img class="img-fluid" src="img/user.png" alt="">
-						<a href="#"><span>Mark Wiens</span></a>
-					</div>
-					<div class="meta">
-						13th Dec
-						<span class="lnr lnr-heart"></span> 15
-						<span class="lnr lnr-bubble"></span> 04
-					</div>
-				</div>
-				<a href="#">
-					<h4>Break Through Self Doubt
-						And Fear</h4>
-				</a>
-				<p>
-					Dream interpretation has many forms; it can be done be done for the sake of fun, hobby or can be
-					taken up as a serious career.
-				</p>
-			</div>
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<img class="f-img img-fluid mx-auto" src="img/b2.jpg" alt="">
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-					<div>
-						<img class="img-fluid" src="img/user.png" alt="">
-						<a href="#"><span>Mark Wiens</span></a>
-					</div>
-					<div class="meta">
-						13th Dec
-						<span class="lnr lnr-heart"></span> 15
-						<span class="lnr lnr-bubble"></span> 04
-					</div>
-				</div>
-				<a href="#">
-					<h4>Portable Fashion for
-						young women</h4>
-				</a>
-				<p>
-					You may be a skillful, effective employer but if you don’t trust your personnel and the opposite,
-					then the chances of improving.
-				</p>
-			</div>
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<img class="f-img img-fluid mx-auto" src="img/b3.jpg" alt="">
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-					<div>
-						<img class="img-fluid" src="img/user.png" alt="">
-						<a href="#"><span>Mark Wiens</span></a>
-					</div>
-					<div class="meta">
-						13th Dec
-						<span class="lnr lnr-heart"></span> 15
-						<span class="lnr lnr-bubble"></span> 04
-					</div>
-				</div>
-				<a href="#">
-					<h4>Do Dreams Serve As
-						A Premonition</h4>
-				</a>
-				<p>
-					So many of us are demotivated to achieve anything. Such people are not enthusiastic about anything.
-					They don’t want to work involved.
-				</p>
-			</div>
-
-
-		</div>
-	</div>
-</section>
-<!-- end recent-blog Area -->
-
-<!-- Start contact-page Area -->
-<section class="contact-page-area section-gap">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 d-flex flex-column address-wrap">
-				<div class="single-contact-address d-flex flex-row">
-					<div class="icon">
-						<span class="lnr lnr-home"></span>
-					</div>
-					<div class="contact-details">
-						<h5>Binghamton, New York</h5>
-						<p>
-							4343 Hinkle Deegan Lake Road
-						</p>
-					</div>
-				</div>
-				<div class="single-contact-address d-flex flex-row">
-					<div class="icon">
-						<span class="lnr lnr-phone-handset"></span>
-					</div>
-					<div class="contact-details">
-						<h5>00 (958) 9865 562</h5>
-						<p>Mon to Fri 9am to 6 pm</p>
-					</div>
-				</div>
-				<div class="single-contact-address d-flex flex-row">
-					<div class="icon">
-						<span class="lnr lnr-envelope"></span>
-					</div>
-					<div class="contact-details">
-						<h5>support@colorlib.com</h5>
-						<p>Send us your query anytime!</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-8">
-				<form class="form-area contact-form text-right" id="myForm" action="/menu/postOrder" method="post">
-					<div class="row">
-						<div class="col-lg-6 form-group">
-							<input name="account" placeholder="Enter your account" onfocus="this.placeholder = ''"
-								onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
-								type="text">
-
-							<!-- <input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email"> -->
-
-							<input name="amount" placeholder="Enter amount" onfocus="this.placeholder = ''"
-								onblur="this.placeholder = 'Enter amount'" class="common-input mb-20 form-control"
-								type="text">
-						</div>
-						<div class="col-lg-6 form-group">
-							<textarea class="common-textarea form-control" name="order" placeholder="Enter order"
-								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter order'"></textarea>
-						</div>
-						<div class="col-lg-12">
-							<div class="alert-msg" style="text-align: left;"></div>
-							<button type="submit" class="genric-btn primary" style="float: right;">Send Message</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End contact-page Area -->
-
-<!-- Start brands Area -->
-<section class="brands-area">
-	<div class="container">
-		<div class="brand-wrap">
-			<div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
-				<div class="col single-brand">
-					<a href="#"><img class="mx-auto" src="img/l1.png" alt=""></a>
-				</div>
-				<div class="col single-brand">
-					<a href="#"><img class="mx-auto" src="img/l2.png" alt=""></a>
-				</div>
-				<div class="col single-brand">
-					<a href="#"><img class="mx-auto" src="img/l3.png" alt=""></a>
-				</div>
-				<div class="col single-brand">
-					<a href="#"><img class="mx-auto" src="img/l4.png" alt=""></a>
-				</div>
-				<div class="col single-brand">
-					<a href="#"><img class="mx-auto" src="img/l5.png" alt=""></a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End brands Area -->
+<section class="home-about-area pt-120"></section>
