--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -75,7 +75,7 @@
     <div class="container main-menu">
       <div class="row align-items-center justify-content-between d-flex">
         <div id="logo">
-          <a href="/"><img src="/img/logo.png" alt="" title="" /></a>
+          <a href="/"><img src="/img/logo_DadaEats.png" alt="" title="" /></a>
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
