--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -56,7 +56,7 @@
             <% } %>
 
 
-            <div class="text-center" id="payment" style="visibility:hidden">
+            <div class="text-center" id="payment" style="visibility:hidden; padding-top: 70px">
                 <hr>
                 <span style="font-weight: bold">支付方式：</span>
                 <img width="150px" src="/img/line.png" id="lineImg" alt="">
