--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1234,7 +1234,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .progress-table .user-name {
-  width: 30%;
+  width: 25%;
 }
 
 .progress-table .user-account {
@@ -1246,10 +1246,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .progress-table .user-orders {
-  width: 50%;
+  width: 45%;
 }
 
 .progress-table .user-sum {
+  width: 10%;
+}
+
+.progress-table .user-payment {
   width: 10%;
 }
 
@@ -1275,7 +1279,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
-.progress-table .table-head .serial, .progress-table .table-head .country, .progress-table .table-head .visit, .progress-table .table-head .percentage, .progress-table .table-head .user-pick, .progress-table .table-head .user-name, .progress-table .table-head .user-account, .progress-table .table-head .user-dadacoin, .progress-table .table-head .user-orders, .progress-table .table-head .user-sum {
+.progress-table .table-head .serial, .progress-table .table-head .country, .progress-table .table-head .visit, .progress-table .table-head .percentage, .progress-table .table-head .user-pick, .progress-table .table-head .user-name, .progress-table .table-head .user-account, .progress-table .table-head .user-dadacoin, .progress-table .table-head .user-orders, .progress-table .table-head .user-sum, .progress-table .table-head .user-confirmed, .progress-table .table-head .user-payment {
   color: #222222;
   line-height: 40px;
   text-transform: uppercase;
@@ -1288,7 +1292,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
-.progress-table .table-row .serial, .progress-table .table-row .country, .progress-table .table-row .visit, .progress-table .table-row .percentage, .progress-table .table-row .user-pick, .progress-table .table-row .user-name, .progress-table .table-row .user-account, .progress-table .table-row .user-dadacoin, .progress-table .table-row .user-orders, .progress-table .table-row .user-sum {
+.progress-table .table-row .serial, .progress-table .table-row .country, .progress-table .table-row .visit, .progress-table .table-row .percentage, .progress-table .table-row .user-pick, .progress-table .table-row .user-name, .progress-table .table-row .user-account, .progress-table .table-row .user-dadacoin, .progress-table .table-row .user-orders, .progress-table .table-row .user-sum, .progress-table .table-row .user-orders, .progress-table .table-row .user-confirmed, .progress-table .table-row .user-payment {
   display: flex;
   /* align-items: center; */
 }
