--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -34,7 +34,7 @@
                             </div>
                             <% if(result.orders[i].status == 'not-confirmed'){ %>
                             <a href="#" class="genric-btn radius danger removeItems" data-toggle="modal"
-                                data-target="#Modal-" onclick="removeItems('<%= result.orders[i].oid %>')">-</a>
+                                data-target="#Modal-" onclick="removeItems('<%= result.orders[i].oid %>')">X</a>
                             <% } %>
                         </div>
                     </div>
