--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- start banner Area -->
-<section class="banner-area" style="background-image: url('/img/bannerbgImg.jpg'); background-repeat: no-repeat;background-position: top">
+<section class="banner-area" style="background-image: url('/img/bannerbgImg.jpg'); background-repeat: no-repeat;background-position: top;background-size: cover">
 	<div class="container">
 		<div class="row fullscreen align-items-center justify-content-between">
 			<div class="col-lg-6 col-md-6 banner-left">
