--- a/views/dadacoin.ejs
+++ b/views/dadacoin.ejs
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-6 col-md-6 home-about-left">
-                <img class="img-fluid" src="/img/about-img.png" alt="">
+                <img class="img-fluid" src="/img/aragaki2.jpg" alt="">
             </div>
             <div class="col-lg-5 col-md-6 home-about-right">
                 <h6>About DadaCoin</h6>
