--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -79,6 +79,7 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
+            <li class="auth dashboard"><a href="#" class="manageMenus">管理開團</a></li>
             <li class="auth dashboard"><a href="#" class="manageUsers">管理使用者</a></li>
             <li class="auth dashboard"><a href="#" class="manageOrders">管理訂單</a></li>
             <li class="auth"><a href="#" class="nav-lookMenu">看菜單</a></li>
@@ -213,6 +214,7 @@
 
           if (res.account == 'admin') {
             $('.dashboard').show();
+            $('.manageMenus').attr('href', '/dashboard/getMenus')
             $('.manageUsers').attr('href', '/dashboard/getUsers')
             $('.manageOrders').attr('href', '/dashboard/getOrders')
           } else {
