--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,19 @@
 <!-- start banner Area -->
-<section class="banner-area" style="background-image: url('/img/bannerbgImg.jpg'); background-repeat: no-repeat;background-position: top;background-size: cover">
-	<div class="container">
-		<div class="row fullscreen align-items-center justify-content-between">
-			<div class="col-lg-6 col-md-6 banner-left">
-				<h6>Howdy! This is</h6>
-				<h1>Dada Eats</h1>
-				<p>
-					今天中午，我想來點.....
-				</p>
+<section class="banner-area relative blog-home-banner" id="home">
+    <div class="overlay overlay-bg"></div>
+    <div class="container">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="about-content blog-header-content col-lg-12">
+                <h1 class="text-white">
+                    DadaEats
+                </h1>
+                <p class="text-white">
+                    Life is short, have fun & enjoy it.
+                </p>
 				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
+    </div>
 </section>
 <!-- End banner Area -->
 
