--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
                     DadaEats
                 </h1>
                 <p class="text-white">
-                    Life is short, have fun & enjoy it...
+                    Life is short, have fun & enjoy it.
                 </p>
 				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
             </div>
