--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,94 +1,4 @@
-<div class="section-top-border container">
-    <div class="progress-table-wrap">
-        <div class="progress-table">
-            <h1 style="font-family: Microsoft JhengHei;">咬一口脆皮甜甜圈</h1>
-            <hr>
-            <% for(var i = 0;i < menus.menu_categories.length; i++){ %>
-            <blockquote class="generic-blockquote">
-                <h3>
-                    <%= menus.menu_categories[i].name %>
-                </h3>
-                <%= menus.menu_categories[i].description %>
-            </blockquote>
-            <br>
-            <% for(var j = 0;j < menus.menu_categories[i].products.length; j++){ %>
-            <div class="table-row">
-                <div class="row no-margin" style="width: 100%">
-                    <div class="col-sm-12 col-md-8">
-                        <div class="country">
-                            <% if( menus.menu_categories[i].products[j].logo_path ){ %>
-                            <img src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="45%" alt="flag">
-                            <% } %>
-                            <div>
-                                <p class="menu-title"><%= menus.menu_categories[i].products[j].name %></p>
-                                <%= menus.menu_categories[i].products[j].description %>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 text-right align-self-center">
-                        <div class="inline-flex banner-left">
-                            <div class="menu-title mr-15">NT$<%= menus.menu_categories[i].products[j].lowestPrice %>元起
-                            </div>
-                            <a href="#" class="genric-btn radius primary-btn" data-toggle="modal"
-                                data-target="#Modal-<%= i%><%= j %>" onclick="removeToppings()">+</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <!-- Modal -->
-            <div class="modal fade" id="Modal-<%= i %><%= j %>" tabindex="-1" role="dialog"
-                aria-labelledby="Modal-Title" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header" style="display: block">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <% if( menus.menu_categories[i].products[j].logo_path ){ %>
-                            <img id="menu-img-<%= menus.menu_categories[i].products[j].id %>"
-                                src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="100%" alt="flag">
-                            <% } %>
-                            <div class="modal-title" id="Modal-Title">
-                                <p id="menu-title-<%= menus.menu_categories[i].products[j].id %>" class="menu-title">
-                                    <%= menus.menu_categories[i].products[j].name %></p>
-                                <%= menus.menu_categories[i].products[j].description %>
-                            </div>
-                        </div>
-                        <div class="modal-body">
-                            <% for(var m = 0; m < menus.menu_categories[i].products[j].product_variations.length; m++){ %>
-                            <label style="width: 100%;display: flex; justify-content: space-between">
-                                <span>
-                                    <input type="radio" name="vari-check" id="vari_<%=i%>_<%=j%>_<%=m%>"
-                                        menudata="<%= menus.menu_categories[i].products[j].product_variations[m].topping_ids %>"
-                                        menudetails={"item":"<%= menus.menu_categories[i].products[j].product_variations[m].name %>","price":<%= menus.menu_categories[i].products[j].product_variations[m].price %>}>
-                                    <%= menus.menu_categories[i].products[j].product_variations[m].name %>
-                                </span>
-                                <span
-                                    class="text-right">NT$<%= menus.menu_categories[i].products[j].product_variations[m].price %>
-                                </span>
-                            </label>
-                            <% } %>
-                            <div class="toppings-wrap"></div>
-                        </div>
-                        <div class="modal-footer">
-                            <p>總計：<p id="sum">5</p>
-                            </p>
-                            <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button"
-                                class="btn btn-primary submit-btn"
-                                onclick="submit(<%= menus.menu_categories[i].products[j].id %>)" data-dismiss="modal">確定</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <% } %>
-            <% } %>
-        </div>
-    </div>
-</div>
-
-<script>
+<script type="text/javascript">
 
     $(document).on('change', 'input:radio[id^="vari_"]', function (event) {
         var topping_ids = this.getAttribute("menudata")
@@ -285,3 +195,94 @@
 
     }
 </script>
+
+<div class="section-top-border container">
+    <div class="progress-table-wrap">
+        <div class="progress-table">
+            <h1 style="font-family: Microsoft JhengHei;">咬一口脆皮甜甜圈</h1>
+            <hr>
+            <% for(var i = 0;i < menus.menu_categories.length; i++){ %>
+            <blockquote class="generic-blockquote">
+                <h3>
+                    <%= menus.menu_categories[i].name %>
+                </h3>
+                <%= menus.menu_categories[i].description %>
+            </blockquote>
+            <br>
+            <% for(var j = 0;j < menus.menu_categories[i].products.length; j++){ %>
+            <div class="table-row">
+                <div class="row no-margin" style="width: 100%">
+                    <div class="col-sm-12 col-md-8">
+                        <div class="country">
+                            <% if( menus.menu_categories[i].products[j].logo_path ){ %>
+                            <img src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="45%" alt="flag">
+                            <% } %>
+                            <div>
+                                <p class="menu-title"><%= menus.menu_categories[i].products[j].name %></p>
+                                <%= menus.menu_categories[i].products[j].description %>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 text-right align-self-center">
+                        <div class="inline-flex banner-left">
+                            <div class="menu-title mr-15">NT$<%= menus.menu_categories[i].products[j].lowestPrice %>元起
+                            </div>
+                            <a href="#" class="genric-btn radius primary-btn" data-toggle="modal"
+                                data-target="#Modal-<%= i%><%= j %>" onclick="removeToppings()">+</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="Modal-<%= i %><%= j %>" tabindex="-1" role="dialog"
+                aria-labelledby="Modal-Title" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header" style="display: block">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <% if( menus.menu_categories[i].products[j].logo_path ){ %>
+                            <img id="menu-img-<%= menus.menu_categories[i].products[j].id %>"
+                                src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="100%" alt="flag">
+                            <% } %>
+                            <div class="modal-title" id="Modal-Title">
+                                <p id="menu-title-<%= menus.menu_categories[i].products[j].id %>" class="menu-title">
+                                    <%= menus.menu_categories[i].products[j].name %></p>
+                                <%= menus.menu_categories[i].products[j].description %>
+                            </div>
+                        </div>
+                        <div class="modal-body">
+                            <% for(var m = 0; m < menus.menu_categories[i].products[j].product_variations.length; m++){ %>
+                            <label style="width: 100%;display: flex; justify-content: space-between">
+                                <span>
+                                    <input type="radio" name="vari-check" id="vari_<%=i%>_<%=j%>_<%=m%>"
+                                        menudata="<%= menus.menu_categories[i].products[j].product_variations[m].topping_ids %>"
+                                        menudetails={"item":"<%= menus.menu_categories[i].products[j].product_variations[m].name %>","price":<%= menus.menu_categories[i].products[j].product_variations[m].price %>}>
+                                    <%= menus.menu_categories[i].products[j].product_variations[m].name %>
+                                </span>
+                                <span
+                                    class="text-right">NT$<%= menus.menu_categories[i].products[j].product_variations[m].price %>
+                                </span>
+                            </label>
+                            <% } %>
+                            <div class="toppings-wrap"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <p>總計：<p id="sum">5</p>
+                            </p>
+                            <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button"
+                                class="btn btn-primary submit-btn"
+                                onclick="submit(<%= menus.menu_categories[i].products[j].id %>)" data-dismiss="modal">確定</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% } %>
+            <% } %>
+        </div>
+    </div>
+</div>
+
