--- a/views/getUsers.ejs
+++ b/views/getUsers.ejs
@@ -70,7 +70,10 @@
                 console.log(response);
             }
         });
-        location.reload()
+        setTimeout(() => {
+            location.reload();
+        
+        }, 500)
 
     }
 </script>
