--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
                 <p class="text-white">
                     Life is short, have fun & enjoy it.
                 </p>
-				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
+				<a href="/menu/getMenu?groupId=<%= groupId %>" class="primary-btn text-uppercase">看菜單</a>
             </div>
         </div>
     </div>
