--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -72,7 +72,7 @@
 <script>
 
     var isMobile = false;
-    $(document).ready(() => {
+    $(document).ready(function() {
         var browser = { versions: function () { var u = navigator.userAgent, app = navigator.appVersion; return { mobile: !!u.match(/AppleWebKit.*Mobile.*/), ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), android: u.indexOf("Android") > -1 || u.indexOf("Linux") > -1, iPhone: u.indexOf("iPhone") > -1, iPad: u.indexOf("iPad") > -1 }; }(), language: (navigator.browserLanguage || navigator.language).toLowerCase() }; $("#aa2").append("userAgent 內容: <BR/>" + navigator.userAgent + "<BR/><BR/>"); $("#aa2").append("是否為移動終端: " + browser.versions.mobile + "<BR/>"); $("#aa2").append("是否 ios: " + browser.versions.ios + "<BR/>"); $("#aa2").append("是否 android: " + browser.versions.android + "<BR/>");
 
         isMobile = browser.versions.mobile
@@ -124,7 +124,7 @@
         }, "show");
     }
 
-    $("#lineImg").on('click', () => {
+    $("#lineImg").on('click', function() {
         if (!isMobile) { // 電腦版
             Swal.fire({
                 title: 'Line掃碼支付',
@@ -134,12 +134,7 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                            rgba(0,0,123,0.4)
-                            url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                            left top
-                            no-repeat
-                        `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         } else { // 手機版
             Swal.fire({
@@ -150,18 +145,13 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                            rgba(0,0,123,0.4)
-                            url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                            left top
-                            no-repeat
-                        `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         }
 
     })
 
-    $("#jkospayImg").on('click', () => {
+    $("#jkospayImg").on('click', function() {
         if (!isMobile) { // 電腦版
             Swal.fire({
                 title: '街口支付',
@@ -171,12 +161,7 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         } else { // 手機版
             Swal.fire({
@@ -185,18 +170,13 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         }
 
     })
 
-    $("#richartImg").on('click', () => {
+    $("#richartImg").on('click', function() {
         if (!isMobile) { // 電腦版
             Swal.fire({
                 title: 'Richart 轉帳',
@@ -206,12 +186,7 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         } else { // 手機版
             Swal.fire({
@@ -220,18 +195,13 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         }
 
     })
 
-    $("#ctbcImg").on('click', () => {
+    $("#ctbcImg").on('click', function() {
         if (!isMobile) { // 電腦版
             Swal.fire({
                 title: '中國信託轉帳',
@@ -241,12 +211,7 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         } else { // 手機版
             Swal.fire({
@@ -257,12 +222,7 @@
                 width: 600,
                 padding: '3em',
                 background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
+                backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
             })
         }
 
