--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,4 +1,5 @@
-<script type="text/javascript">
+
+<script>
 
     $(document).on('change', 'input:radio[id^="vari_"]', function (event) {
         var topping_ids = this.getAttribute("menudata")
@@ -16,58 +17,50 @@
                     console.log(topping_ids);
 
                     for (var i = 0; i < topping_ids.split(",").length; i++) {
-                        // console.log(response[topping_ids.split(",")[i]].name);
-                        if(response[topping_ids.split(",")[i]].quantity_minimum == 1 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
-                            $(".toppings").append("<p class=\"menu-title\">" + response[topping_ids.split(",")[i]].name + "(*必填)</p>");
-                        }else {
-                            $(".toppings").append("<p class=\"menu-title\">" + response[topping_ids.split(",")[i]].name + "</p>");
+                        // console.log(res_topping_ids.name);
+                        var res_topping_ids = response[topping_ids.split(",")[i]];
+                        if (res_topping_ids.quantity_minimum == 1 && res_topping_ids.quantity_maximum == 1) {
+                            $(".toppings").append("<p class=\"menu-title\">" + res_topping_ids.name + "(*必填)</p>");
+                        } else {
+                            $(".toppings").append("<p class=\"menu-title\">" + res_topping_ids.name + "</p>");
                         }
 
-                        for (var j = 0; j < response[topping_ids.split(",")[i]].options.length; j++) {
-                            // console.log(response[topping_ids.split(",")[i]].options[j].name);
-                            if (response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
+                        for (var j = 0; j < res_topping_ids.options.length; j++) {
+                            // console.log(res_topping_ids_options.name);
+                            var res_topping_ids_options = res_topping_ids.options[j];
+                            var template = '<label style="width: 100%;display: flex; justify-content: space-between">' +
+                                '<span>' +
+                                '<input type="%%inputeType%%" name="vari-check-%%i%%" id="%%idName%%-%%i%%-%%j%%"' +
+                                'menudetails={"item":"%%res_topping_ids_options.name%%","price":%%res_topping_ids_options.price%%} ' +
+                                '>' +
+                                '%%res_topping_ids_options.name%%' +
+                                '</span>' +
+
+                                '<span' +
+                                'class="text-right">NT$%%res_topping_ids_options.price%%</span>' +
+                                '</label>'
+                            template = template.replace(/%%i%%/g, i);
+                            template = template.replace(/%%j%%/g, j);
+                            template = template.replace(/%%res_topping_ids_options.name%%/g, res_topping_ids_options.name.replace(/\s+/g, ""));
+                            template = template.replace(/%%res_topping_ids_options.price%%/g, res_topping_ids_options.price);
+
+                            if (res_topping_ids.quantity_minimum == 0 && res_topping_ids.quantity_maximum == 1) {
                                 // cancelable radio
-                                $(".toppings").append(`<label style="width: 100%;display: flex; justify-content: space-between">
-                                    <span>
-                                        <label><input type="radio" name="vari-check-${i}" id="cancelable-radio-${i}-${j}"
-                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${response[topping_ids.split(",")[i]].options[j].price}} 
-                                            >
-                                        ${ response[topping_ids.split(",")[i]].options[j].name}</label>
-                                    </span>
-                                    
-                                    <span
-                                        class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
-                                </label>`)
+                                template = template.replace(/%%inputeType%%/g, 'radio');
+                                template = template.replace(/%%idName%%/g, 'cancelable-radio');
 
-                            } else if (response[topping_ids.split(",")[i]].quantity_minimum == 1 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
+                            } else if (res_topping_ids.quantity_minimum == 1 && res_topping_ids.quantity_maximum == 1) {
                                 // uncancelable radio
-                                $(".toppings").append(`<label style="width: 100%;display: flex; justify-content: space-between">
-                                    <span>
-                                        <input type="radio" name="vari-check-${i}" id="uncancelable-radio-${i}-${j}"
-                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${response[topping_ids.split(",")[i]].options[j].price}} 
-                                            >
-                                        ${ response[topping_ids.split(",")[i]].options[j].name}
-                                    </span>
-                                    
-                                    <span
-                                        class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
-                                </label>`)
+                                template = template.replace(/%%inputeType%%/g, 'radio');
+                                template = template.replace(/%%idName%%/g, 'uncancelable-radio');
 
-                            } else if (response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum > 1) {
+                            } else if (res_topping_ids.quantity_minimum == 0 && res_topping_ids.quantity_maximum > 1) {
                                 // checkbox
-                                $(".toppings").append(`<label style="width: 100%;display: flex; justify-content: space-between">
-                                    <span>
-                                        <label><input type="checkbox" name="vari-check-${i}" id="checkbox-${i}-${j}"
-                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${response[topping_ids.split(",")[i]].options[j].price}}
-                                            >
-                                        ${ response[topping_ids.split(",")[i]].options[j].name}</label>
-                                    </span>
-                                    
-                                    <span
-                                        class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
-                                </label>`)
-
+                                template = template.replace(/%%inputeType%%/g, 'checkbox');
+                                template = template.replace(/%%idName%%/g, 'checkbox');
                             }
+
+                            $(".toppings").append(template);
                         }
 
                     }
@@ -83,7 +76,7 @@
         if (this.className != "selected") {
             // console.log('not selected yet');
 
-            $(this).closest('.modal-body').find(`input[name=${this.name}]`).removeClass('selected');
+            $(this).closest('.modal-body').find('input[name=' + this.name + ']').removeClass('selected');
             $(this).addClass("selected")
 
         } else if (this.className == "selected") {
@@ -128,10 +121,20 @@
         // }
     })
 
+    function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, '\\$&');
+        var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, ' '));
+    }
+
     function submit(productId) {
 
-        var menuImg = $(`#menu-img-${productId}`).attr('src');
-        var menuTitle = $(`#menu-title-${productId}`).text().trim();
+        var menuImg = $('#menu-img-' + productId).attr('src');
+        var menuTitle = $('#menu-title-' + productId).text().trim();
 
         var menuContents = new Array();
         var amount = parseInt($('#sum').text().trim());
@@ -139,13 +142,13 @@
         for (var i = 0; i < $('input:radio:checked').length; i++) {
             var radioId = $('input:radio:checked').val(0)[i].id;
             var menuContnet = new Object();
-            menuContnet = $(`#${radioId}`).attr('menudetails');
+            menuContnet = $('#' + radioId).attr('menudetails');
             menuContents.push(JSON.parse(menuContnet));
         }
         for (var i = 0; i < $('input:checkbox:checked').length; i++) {
             var checkboxId = $('input:checkbox:checked').val(0)[i].id;
             var menuContnet = new Object();
-            menuContnet = $(`#${checkboxId}`).attr('menudetails');
+            menuContnet = $('#' + checkboxId).attr('menudetails');
             menuContents.push(JSON.parse(menuContnet));
         }
 
@@ -157,7 +160,8 @@
                 orderImg: menuImg,
                 orderTitle: menuTitle,
                 orderContents: menuContents,
-                amount: amount
+                amount: amount,
+                groupId: getParameterByName('groupId')
             },
             error: function (err) {
                 if (err) throw err
@@ -177,15 +181,10 @@
                     width: 600,
                     padding: '3em',
                     background: '#fff url(https://sweetalert2.github.io/images/trees.png)',
-                    backdrop: `
-                        rgba(0,0,123,0.4)
-                        url("https://sweetalert2.github.io/images/nyan-cat.gif")
-                        left top
-                        no-repeat
-                    `
-                }).then((result) => {
+                    backdrop: 'rgba(0,0,123,0.4) url("https://sweetalert2.github.io/images/nyan-cat.gif") left top no-repeat'
+                }).then(function (result) {
                     if (result.value) {
-                        window.location.href = `/cart/getCartList/`
+                        window.location.href = '/cart/getCartList?groupId='+getParameterByName('groupId')
                     }
 
                 })
@@ -195,11 +194,10 @@
 
     }
 </script>
-
 <div class="section-top-border container">
     <div class="progress-table-wrap">
         <div class="progress-table">
-            <h1 style="font-family: Microsoft JhengHei;">咬一口脆皮甜甜圈</h1>
+            <h1 style="font-family: Microsoft JhengHei;"><%= title %></h1>
             <hr>
             <% for(var i = 0;i < menus.menu_categories.length; i++){ %>
             <blockquote class="generic-blockquote">
@@ -215,7 +213,8 @@
                     <div class="col-sm-12 col-md-8">
                         <div class="country">
                             <% if( menus.menu_categories[i].products[j].logo_path ){ %>
-                            <img src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="45%" alt="flag">
+                            <img src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="45%"
+                                alt="flag">
                             <% } %>
                             <div>
                                 <p class="menu-title"><%= menus.menu_categories[i].products[j].name %></p>
@@ -246,7 +245,8 @@
                             </button>
                             <% if( menus.menu_categories[i].products[j].logo_path ){ %>
                             <img id="menu-img-<%= menus.menu_categories[i].products[j].id %>"
-                                src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="100%" alt="flag">
+                                src="<%= menus.menu_categories[i].products[j].logo_path.split('?')[0] %>" width="100%"
+                                alt="flag">
                             <% } %>
                             <div class="modal-title" id="Modal-Title">
                                 <p id="menu-title-<%= menus.menu_categories[i].products[j].id %>" class="menu-title">
@@ -275,7 +275,8 @@
                             </p>
                             <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button"
                                 class="btn btn-primary submit-btn"
-                                onclick="submit(<%= menus.menu_categories[i].products[j].id %>)" data-dismiss="modal">確定</button>
+                                onclick="submit(<%= menus.menu_categories[i].products[j].id %>)"
+                                data-dismiss="modal">確定</button>
                         </div>
                     </div>
                 </div>
@@ -285,4 +286,3 @@
         </div>
     </div>
 </div>
-
