--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -23,7 +23,7 @@
                     <input id="myText" type="text" class="form-control">
                 </div>
                 <div class="col-md-4">
-                    <a href="#" class="genric-btn info radius" style="width:100%" onclick="submit()">送出</a>
+                    <a class="genric-btn info radius" style="width:100%; color: #fff" onclick="submit()">送出</a>
                 </div>
             </div>
 
